[package]
name = "bh-rust"
version = "0.1.0"
edition = "2021"
description = "Bandwidth Hero proxy server for Komikku — image compression, resize, format conversion"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with SOCKS5 support
reqwest = { version = "0.12", features = ["socks", "stream"] }

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
fast_image_resize = { version = "5", features = ["image"] }

# Config file
config = { version = "0.15", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["std"] }

# Misc
url = "2"
percent-encoding = "2"
serde_json = "1"
anyhow = "1"
base64 = "0.22"

[dev-dependencies]
hex = "0.4"
image = { version = "0.25", features = ["jpeg", "png"] }
